tdf#122454 Impress: Correct d'n'd animation selection in Windows

Change-Id: I0f17ff657beb2a5b3dfed91856ec45ddfca793a9